High-contrast fix

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -115,3 +115,8 @@ body.contrast-high input[type="text"]:focus {
   box-shadow: none !important;
   outline: 3px solid $focusOutlineColor !important;
 }
+body.contrast-high {
+  .nav-tabs .nav-item .nav-link:focus {
+    background-color: $color-highlight-highContrast !important;
+  }
+}
